image extension changed / header fixed / code aligned

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -36,13 +36,13 @@
 
 .header-home h1 {
     margin: 5px;
-    font-size: 45px;
+    font-size: 47px;
 }
 
 .header-home h2 {
     font-family: 'Dancing Script', cursive;
     font-weight: lighter;
-    font-size: 28px;
+    font-size: 35px;
 }
 
 .arrow {
